--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -4,8 +4,17 @@
     <Page title="Vista List">
         <content>
             <VBox class="sapUiContentPadding sapUiSmallMargin">
-                <List headerText="Productos" items="{Products>/}" mode="SingleSelectMaster" itemPress="onPressProduct">
-                    <StandardListItem title="{Products>Name}" description="{Products>Description}" icon="{Products>ProductPicUrl}" type="Active" />
+                <List 
+                    items="{path:'mProduct>/ProductCollection'}" 
+                    mode="SingleSelectMaster" 
+                    itemPress="onPressProduct" 
+                    growing="true" 
+                    growingThreshold="10" 
+                    growingScrollToLoad="false">                   
+                    <StandardListItem title="{mProduct>Name}" 
+                        description="{mProduct>Description}" 
+                        icon="{mProduct>ProductPicUrl}" 
+                        type="Active" />
                 </List>
             </VBox>
         </content>
