--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,17 +1,29 @@
 <mvc:View controllerName="appviewcatalog.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m" xmlns:f="sap.f">
     <Page id="page" title="{i18n>title}">
         <content>
+        <ScrollContainer width="100%" height="100%" vertical="true">
         <Panel headerText="Tipos de Vista" class="sapUiMediumMargin" width="auto">
-            <VBox class="sapUiTinyMargin">
-                <GenericTile header="Soy un Tile" press="onPressTile">
+            <f:GridContainer class="sapuiSmallMargin" items="{mTile>/TileCollection}">
+                <f:layout>
+                    <f:GridContainerSettings rowSize="84px" columnSize="84px" gap="8px" />
+                </f:layout>
+                <f:layoutS>
+                    <f:GridContainerSettings rowSize="70px" columnSize="70px" gap="8px" />
+                </f:layoutS>
+                    <GenericTile header="{mTile>Title}" press="onPressTile" headerImage="{mTile>Icon}">
+                        <layoutData>
+                            <f:GridContainerItemLayoutData rows="2" columns="2" />
+                        </layoutData>
                     <TileContent >
-                        <Label text="Soy la descripción del tile" wrapping="true"/>
+                        <Label text="{mTile>Description}" wrapping="true"/>
                     </TileContent>
-                </GenericTile>                    
-            </VBox>
+                </GenericTile>
+            </f:GridContainer>
         </Panel>
+        </ScrollContainer>
         </content>
+
     </Page>
 </mvc:View>
