--- a/webapp/view/Form.view.xml
+++ b/webapp/view/Form.view.xml
@@ -1,6 +1,6 @@
 <mvc:View controllerName="appviewcatalog.controller.Form"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m" xmlns:f="sap.f">
+    xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
         <content>
             <Text text="Hola Mundo"/>
