--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -8,7 +8,7 @@
 	xmlns:uxap="sap.uxap"
 	xmlns:layout="sap.ui.layout"
 >
-<Page title="Vista Detalle">
+<Page title="Vista Detalle" showNavButton="true" navButtonPress="onNavBack">
 
 	<uxap:ObjectPageLayout>
 
