--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -1,7 +1,7 @@
 <mvc:View controllerName="appviewcatalog.controller.List"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
-    <Page title="Vista List">
+    <Page title="Vista List" showNavButton="true" navButtonPress="onNavBack">
         <content>
             <VBox class="sapUiContentPadding sapUiSmallMargin">
 
