--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -10,7 +10,7 @@
                     <SearchField liveChange=".onSearch" width="100%"/>
                 </OverflowToolbar>
              
-                <List 
+                <!-- <List 
                     id="listProducts"
                     items="{path:'mProduct>/ProductCollection'}" 
                     mode="SingleSelectMaster" 
@@ -22,6 +22,10 @@
                         description="{mProduct>Description}" 
                         icon="{mProduct>ProductPicUrl}" 
                         type="Active" />
+                </List> -->
+
+                <List items="{/Products}">
+                    <StandardListItem title="{ProductName}"/>
                 </List>
             </VBox>
         </content>
