--- a/webapp/view/Form.view.xml
+++ b/webapp/view/Form.view.xml
@@ -1,10 +1,182 @@
 <mvc:View controllerName="appviewcatalog.controller.Form"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m" xmlns:f="sap.f">
-    <Page id="page" title="{i18n>title}">
-        <content>
-            <Text text="Hola Mundo"/>
-        </content>
+    xmlns="sap.m" xmlns:f="sap.ui.layout.form" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout">
 
+    <Page id="page" title="{i18n>title}" showNavButton="true" navButtonPress="onNavBack" >
+        <content>
+            <l:Grid defaultIndent="XL3 L3 M0 S0" defaultSpan="XL6 L6 M12 S12">
+                <VBox class="sapUiSmallMargin" alignContent="SpaceAround">
+                    <f:Form id="frmGeneral" editable="true">
+                        <f:title>
+                            <core:Title text="General Info"/>
+                        </f:title>
+                        <f:layout>
+                            <f:ResponsiveGridLayout
+								labelSpanXL="3"
+								labelSpanL="3"
+								labelSpanM="3"
+								labelSpanS="12"
+								adjustLabelSpan="false"
+								emptySpanXL="4"
+								emptySpanL="4"
+								emptySpanM="4"
+								emptySpanS="0"
+								columnsXL="1"
+								columnsL="1"
+								columnsM="1"
+								singleContainerFullSize="false"
+							/>
+                        </f:layout>
+                        <f:formContainers>
+                            <f:FormContainer >
+                                <f:formElements>
+                                    <f:FormElement label="Product ID">
+                                        <f:fields>
+                                            <Input id="txtProducId" value=""/>
+                                        </f:fields>
+                                    </f:FormElement>
+
+                                    <f:FormElement label="Main Category - Category">
+                                        <f:fields>
+                                            <ComboBox id="cboMainCategory" items="{ path:'mProduct>/MainCategories' ,sorter: { path: 'text'}}">
+                                                <core:Item key="{mProduct>key}" text="{mProduct>text}"/>
+                                            </ComboBox>
+                                            <ComboBox id="cboCategory" items="{ path:'mProduct>/Categories' ,sorter: { path: 'text'}}">
+                                                <core:Item key="{mProduct>key}" text="{mProduct>text}"/>
+                                            </ComboBox>
+                                        </f:fields>
+                                    </f:FormElement>  
+
+                                    <f:FormElement label="Name">
+                                        <f:fields>
+                                            <Input id="txtName" value=""/>
+                                        </f:fields>
+                                    </f:FormElement>  
+
+                                    <f:FormElement label="Description">
+                                        <f:fields>
+                                            <Input id="txtDescription" value=""/>
+                                        </f:fields>
+                                    </f:FormElement>  
+
+                                    <f:FormElement label="Supplier Name">
+                                        <f:fields>
+                                            <Input id="txtSupplier" value=""/>
+                                        </f:fields>
+                                    </f:FormElement>  
+
+                                </f:formElements>
+                            </f:FormContainer>
+                        </f:formContainers>
+                    </f:Form>
+
+                    <f:Form id="frmWeight" editable="true" class="sapUiSmallMarginTop">
+                        <f:title>
+                            <core:Title text="Weight"/>
+                        </f:title>
+                        <f:layout>
+                            <f:ResponsiveGridLayout
+								labelSpanXL="3"
+								labelSpanL="3"
+								labelSpanM="3"
+								labelSpanS="12"
+								adjustLabelSpan="false"
+								emptySpanXL="4"
+								emptySpanL="4"
+								emptySpanM="4"
+								emptySpanS="0"
+								columnsXL="1"
+								columnsL="1"
+								columnsM="1"
+								singleContainerFullSize="false"
+							/>
+                        </f:layout>
+                        <f:formContainers>
+                            <f:FormContainer >
+                                <f:formElements>
+                                    <f:FormElement label="Weight Measure">
+                                        <f:fields>
+                                            <Input id="txtWeightMeasure"/>
+                                        </f:fields>
+                                    </f:FormElement>
+                                    <f:FormElement label="Weight Unit">
+                                        <f:fields>
+                                            <RadioButtonGroup id="rbgWeightUnit" columns="2">
+                                                <RadioButton text="KG" selected="true"/>
+                                                <RadioButton text="LB" />
+                                            </RadioButtonGroup>
+                                        </f:fields>
+                                    </f:FormElement>
+                                </f:formElements>
+                            </f:FormContainer>
+                        </f:formContainers>
+                    </f:Form>
+
+                    <f:Form id="frmDetails" editable="true" class="sapUiSmallMarginTop">
+                        <f:title>
+                            <core:Title text="Details"/>
+                        </f:title>
+                        <f:layout>
+                            <f:ResponsiveGridLayout
+								labelSpanXL="3"
+								labelSpanL="3"
+								labelSpanM="3"
+								labelSpanS="12"
+								adjustLabelSpan="false"
+								emptySpanXL="4"
+								emptySpanL="4"
+								emptySpanM="4"
+								emptySpanS="0"
+								columnsXL="1"
+								columnsL="1"
+								columnsM="1"
+								singleContainerFullSize="false"
+							/>
+                        </f:layout>
+                        <f:formContainers>
+                            <f:FormContainer >
+                                <f:formElements>
+                                    <f:FormElement label="Date of Sale">
+                                        <f:fields>
+                                            <DatePicker id="dtSale" placeholder="Enter Date" class="sapUiSmallMarginBottom"/>
+                                        </f:fields>
+                                    </f:FormElement>
+
+                                    <f:FormElement label="Quantity">
+                                        <f:fields>
+                                            <Input id="txtQuantity" value=""/>
+                                        </f:fields>
+                                    </f:FormElement>
+
+                                    <f:FormElement label="Currency Code">
+                                        <f:fields>
+                                            <RadioButtonGroup id="rbgCurrency" columns="2" valueState="Success" >
+                                                <RadioButton text="EUR" selected="true"/>
+                                                <RadioButton text="USD"/>
+                                            </RadioButtonGroup>
+                                        </f:fields>
+                                    </f:FormElement>
+
+                                    <f:FormElement label="Price">
+                                        <f:fields>
+                                            <Input id="txtPrice" value=""/>
+                                        </f:fields>
+                                    </f:FormElement>
+
+                                </f:formElements>
+                            </f:FormContainer>
+                        </f:formContainers>
+                    </f:Form>
+                </VBox>
+            </l:Grid>
+        </content>
+        <footer>
+            <Toolbar >
+                <ToolbarSpacer />
+                <Button text="Submit" type="Accept" press="onSubmit"/>
+                <Button text="Cancel" type="Reject" press="onReject"/>
+            </Toolbar>
+        </footer>
     </Page>
+
 </mvc:View>
