--- a/webapp/view/Form.view.xml
+++ b/webapp/view/Form.view.xml
@@ -37,7 +37,7 @@
 								<f:formElements>
 									<f:FormElement label="Product ID">
 										<f:fields>
-											<Input id="txtProductId" value=""/>
+											<Input id="txtProductId" value="" change="changeValueState"/>
 										</f:fields>
 									</f:FormElement>
 									<f:FormElement label="Main Category - Category">
@@ -47,7 +47,7 @@
 												items="{
 													path: 'mProduct>/MainCategories',
 													sorter: { path: 'text' }
-												}">
+												}" change="changeValueState">
 												<core:Item key="{mProduct>key}" text="{mProduct>text}" />
 											</ComboBox>
 											<ComboBox
@@ -55,7 +55,7 @@
 												items="{
 													path: 'mProduct>/Categories',
 													sorter: { path: 'text' }
-												}">
+												}" change="changeValueState">
 												<core:Item key="{mProduct>key}" text="{mProduct>text}" />
 												<layoutData>
 													<l:GridData span="XL1 L2 M2 S4"/>
@@ -65,17 +65,17 @@
 									</f:FormElement>
 									<f:FormElement label="Name">
 										<f:fields>
-											<Input id="txtName" value=""/>
+											<Input id="txtName" value="" change="changeValueState"/>
 										</f:fields>
 									</f:FormElement>
 									<f:FormElement label="Description">
 										<f:fields>
-											<Input id="txtDescription" value=""/>
+											<Input id="txtDescription" value="" change="changeValueState"/>
 										</f:fields>
 									</f:FormElement>
 									<f:FormElement label="Supplier Name">
 										<f:fields>
-											<Input id="txtSupplierName" value=""/>
+											<Input id="txtSupplierName" value="" change="changeValueState"/>
 										</f:fields>
 									</f:FormElement>
 								</f:formElements>
@@ -106,9 +106,9 @@
 						<f:formContainers>
 							<f:FormContainer>
 								<f:formElements>
-									<f:FormElement label="Weight Mesaure">
+									<f:FormElement label="Weight Measure">
 										<f:fields>
-											<Input id="txtWeightMesaure" value=""/>
+											<Input id="txtWeightMesaure" value="" change="changeValueState" type="Number"/>
 										</f:fields>
 									</f:FormElement>
 									<f:FormElement label="Weight Unit">
@@ -152,8 +152,8 @@
 										<DatePicker
 											id="dtSale"
 											placeholder="Enter Date"
-											change="handleChange"
-											class="sapUiSmallMarginBottom"/>
+											change="changeValueState"
+											class="sapUiSmallMarginBottom" />
 									</f:fields>
 								</f:FormElement>
 								<f:FormElement label="Available Status">
@@ -167,7 +167,7 @@
 								</f:FormElement>
 								<f:FormElement label="Quantity">
 									<f:fields>
-										<Input id="txtQuantity" value=""/>
+										<Input id="txtQuantity" value="" type="Number" change="changeValueState"/>
 									</f:fields>
 								</f:FormElement>
 								<f:FormElement label="Currency Code">
@@ -180,7 +180,7 @@
 								</f:FormElement>
 								<f:FormElement label="Price">
 									<f:fields>
-										<Input id="txtPrice" value=""/>
+										<Input id="txtPrice" value="" type="Number" change="changeValueState"/>
 									</f:fields>
 								</f:FormElement>
 							</f:FormContainer>
