--- a/webapp/view/Form.view.xml
+++ b/webapp/view/Form.view.xml
@@ -32,16 +32,16 @@
                                 <f:formElements>
                                     <f:FormElement label="Product ID">
                                         <f:fields>
-                                            <Input id="txtProducId" value=""/>
+                                            <Input id="txtProducId" value="" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>
 
                                     <f:FormElement label="Main Category - Category">
                                         <f:fields>
-                                            <ComboBox id="cboMainCategory" items="{ path:'mProduct>/MainCategories' ,sorter: { path: 'text'}}">
+                                            <ComboBox id="cboMainCategory" items="{ path:'mProduct>/MainCategories' ,sorter: { path: 'text'}}" change="changeValueState">
                                                 <core:Item key="{mProduct>key}" text="{mProduct>text}"/>
                                             </ComboBox>
-                                            <ComboBox id="cboCategory" items="{ path:'mProduct>/Categories' ,sorter: { path: 'text'}}">
+                                            <ComboBox id="cboCategory" items="{ path:'mProduct>/Categories' ,sorter: { path: 'text'}}" change="changeValueState">
                                                 <core:Item key="{mProduct>key}" text="{mProduct>text}"/>
                                             </ComboBox>
                                         </f:fields>
@@ -49,19 +49,19 @@
 
                                     <f:FormElement label="Name">
                                         <f:fields>
-                                            <Input id="txtName" value=""/>
+                                            <Input id="txtName" value="" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>  
 
                                     <f:FormElement label="Description">
                                         <f:fields>
-                                            <Input id="txtDescription" value=""/>
+                                            <Input id="txtDescription" value="" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>  
 
                                     <f:FormElement label="Supplier Name">
                                         <f:fields>
-                                            <Input id="txtSupplier" value=""/>
+                                            <Input id="txtSupplier" value="" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>  
 
@@ -96,7 +96,7 @@
                                 <f:formElements>
                                     <f:FormElement label="Weight Measure">
                                         <f:fields>
-                                            <Input id="txtWeightMeasure"/>
+                                            <Input id="txtWeightMeasure" type="Number" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>
                                     <f:FormElement label="Weight Unit">
@@ -138,7 +138,7 @@
                                 <f:formElements>
                                     <f:FormElement label="Date of Sale">
                                         <f:fields>
-                                            <DatePicker id="dtSale" placeholder="Enter Date" class="sapUiSmallMarginBottom"/>
+                                            <DatePicker id="dtSale" placeholder="Enter Date" class="sapUiSmallMarginBottom" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>
 
@@ -154,7 +154,7 @@
 
                                     <f:FormElement label="Quantity">
                                         <f:fields>
-                                            <Input id="txtQuantity" value=""/>
+                                            <Input id="txtQuantity" value="" type="Number" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>
 
@@ -169,7 +169,7 @@
 
                                     <f:FormElement label="Price">
                                         <f:fields>
-                                            <Input id="txtPrice" value=""/>
+                                            <Input id="txtPrice" value="" type="Number" change="changeValueState"/>
                                         </f:fields>
                                     </f:FormElement>
 
