fragments + dark mode

--- a/webapp/view/Form.view.xml
+++ b/webapp/view/Form.view.xml
@@ -8,6 +8,9 @@
 	xmlns:l="sap.ui.layout"
 >
 	<Page id="page" title="{i18n>title}" showNavButton="true" navButtonPress="onNavBack" >
+	<headerContent>
+        <core:Fragment fragmentName="appviewcatalog.view.fragments.HeaderContent" type="XML"/>
+    </headerContent>
 		<content>			
 			<l:Grid defaultIndent="XL3 L3 M0 S0" defaultSpan="XL6 L6 M12 S12">
 				<VBox class="sapUiSmallMargin" alignContent="SpaceAround">
