--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,6 +1,6 @@
 <mvc:View controllerName="appviewcatalog.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m" xmlns:f="sap.f">
+    xmlns="sap.m" xmlns:f="sap.f" xmlns:core="sap.ui.core">
     <Page id="page" title="{i18n>title}" >
         <content>
         <ScrollContainer width="100%" height="100%" vertical="true">
@@ -24,6 +24,12 @@
         </Panel>
         </ScrollContainer>
         </content>
-
+        <footer>
+            <OverflowToolbar>
+                <Text text="By Ricardo Diaz Dev" />
+                <ToolbarSpacer />
+                <core:Fragment fragmentName="appviewcatalog.view.fragments.HeaderContent" type="XML"/>
+            </OverflowToolbar>
+        </footer>
     </Page>
 </mvc:View>
