--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -1,7 +1,10 @@
 <mvc:View controllerName="appviewcatalog.controller.List"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m" xmlns:core="sap.ui.core">
     <Page title="Vista List" showNavButton="true" navButtonPress="onNavBack">
+        <headerContent>
+            <core:Fragment fragmentName="appviewcatalog.view.fragments.ButtonTheme" type="XML"/>
+        </headerContent>
         <content>
             <VBox class="sapUiContentPadding sapUiSmallMargin">
 
