--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -3,6 +3,7 @@
     xmlns="sap.m" xmlns:core="sap.ui.core">
     <Page title="Vista List" showNavButton="true" navButtonPress="onNavBack">
     <headerContent>
+        <Button text="Open Form" press="onOpenDialog"/> 
         <core:Fragment fragmentName="appviewcatalog.view.fragments.HeaderContent" type="XML"/>
     </headerContent>
         <content>
